--- a/src/_static/css/custom.css
+++ b/src/_static/css/custom.css
@@ -1,4 +1,9 @@
+
 .wy-nav-side {
+    background: #052E37
+}
+
+.wy-nav-top {
     background: #052E37
 }
 
@@ -6,8 +11,13 @@
     background-color:#BFCE40;
 }
 
+.wy-side-nav-search>a img.logo {
+    width: 80%;
+    margin: 25px;
+}
+
+
 .wy-side-nav-search .icon {
-    width: 100%;
     color: #052E37;
 }
 
